--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,8 @@
     "log_file": "logs/polyglot.log"
   },
   "api": {
-    "base_url": "https://ec2-13-51-173-140.eu-north-1.compute.amazonaws.com/",
+    "base_url": "https://ec2-16-171-104-203.eu-north-1.compute.amazonaws.com/",
+    "base_url_local": "http://localhost:80/",
     "health_endpoint": "health/",
     "process_endpoint": "process/"
   },
